--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -4,7 +4,7 @@ import LoginForm from '../components/LoginForm.tsx';
 import { AuthProvider } from '../context/AuthContext.tsx'; // Import AuthProvider
 ---
 
-<Layout title="Login - CancerGenix">
+<Layout title="Login - Genascope">
   <AuthProvider> { /* Wrap with AuthProvider */ }
     <main class="container mx-auto px-4 py-8">
       <LoginForm client:load />
