--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,7 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-			<title>{title} | CancerGenix</title> { /* Update title format */ }
+			<title>{title} | Genascope</title> { /* Update title format */ }
 	</head>
 	<body class="h-full">
 		<AuthProvider> { /* Wrap everything in AuthProvider */ }
