--- a/src/pages/patients.astro
+++ b/src/pages/patients.astro
@@ -1,9 +1,9 @@
 ---
-import SimpleLayout from '../layouts/SimpleLayout.astro';
+import SidebarLayout from '../layouts/SidebarLayout.astro';
 import PatientManager from '../components/PatientManager.tsx';
 ---
 
-<SimpleLayout title="Patient Management - Genascope">
+<SidebarLayout title="Patient Management - Genascope">
   <main class="container mx-auto py-8 px-4">
     <h1 class="text-3xl font-bold mb-6 text-blue-700">Patient Management</h1>
     
@@ -50,3 +50,5 @@ import PatientManager from '../components/PatientManager.tsx';
     min-height: calc(100vh - 140px);
   }
 </style>
+
+</SidebarLayout>
