--- a/src/pages/admin/accounts.astro
+++ b/src/pages/admin/accounts.astro
@@ -1,11 +1,11 @@
 ---
-import SimpleLayout from '../../layouts/SimpleLayout.astro';
+import SidebarLayout from '../../layouts/SidebarLayout.astro';
 import AccountsList from '../../components/AccountsList';
 ---
 
-<SimpleLayout title="Manage Accounts">
+<SidebarLayout title="Manage Accounts">
   <div class="container mx-auto px-4 py-8">
     <h1 class="text-3xl font-bold text-gray-800 mb-6">Account Management</h1>
     <AccountsList client:load />
   </div>
-</SimpleLayout>
+</SidebarLayout>
