--- a/src/pages/admin/users.astro
+++ b/src/pages/admin/users.astro
@@ -1,11 +1,11 @@
 ---
-import SimpleLayout from '../../layouts/SimpleLayout.astro';
+import SidebarLayout from '../../layouts/SidebarLayout.astro';
 import UsersList from '../../components/UsersList';
 ---
 
-<SimpleLayout title="Manage Users">
+<SidebarLayout title="Manage Users">
   <div class="container mx-auto px-4 py-8">
     <h1 class="text-3xl font-bold text-gray-800 mb-6">User Management</h1>
     <UsersList client:load />
   </div>
-</SimpleLayout>
+</SidebarLayout>
