--- a/src/pages/chat-configuration.astro
+++ b/src/pages/chat-configuration.astro
@@ -1,8 +1,7 @@
 ---
 import SidebarLayout from '../layouts/SidebarLayout.astro';
-import ChatConfigurationManagerNewWorkingSimple from '../components/ChatConfigurationManagerNewWorkingSimple';
+import ChatConfigurationPage from '../components/ChatConfigurationPage';
 ---
 
-<SidebarLayout title="Chat Configuration - Genascope">
-  <ChatConfigurationManagerNewWorkingSimple client:load />
+<SidebarLayout title="Chat Configuration - Genascope">        <ChatConfigurationPage client:load />
 </SidebarLayout>
