--- a/src/pages/test-chat.astro
+++ b/src/pages/test-chat.astro
@@ -1,5 +1,5 @@
 ---
-import ChatConfigurationManagerNewWorkingSimple from '../components/ChatConfigurationManagerNewWorkingSimple';
+import ChatConfigurationPage from '../components/ChatConfigurationPage';
 ---
 
 <!DOCTYPE html>
@@ -12,7 +12,7 @@ import ChatConfigurationManagerNewWorkingSimple from '../components/ChatConfigur
 <body>
     <div class="min-h-screen bg-gray-100 p-8">
         <h1 class="text-2xl font-bold mb-4">Test Page - Chat Configuration</h1>
-        <ChatConfigurationManagerNewWorkingSimple client:only="react" />
+        <ChatConfigurationPage client:only="react" />
     </div>
 </body>
 </html>
