--- a/src/pages/admin/edit-user/[id].astro
+++ b/src/pages/admin/edit-user/[id].astro
@@ -1,13 +1,13 @@
 ---
-import SimpleLayout from '../../../layouts/SimpleLayout.astro';
+import SidebarLayout from '../../../layouts/SidebarLayout.astro';
 import EditUserForm from '../../../components/EditUserForm';
 
 const { id } = Astro.params;
 ---
 
-<SimpleLayout title="Edit User">
+<SidebarLayout title="Edit User">
   <div class="container mx-auto px-4 py-8">
     <h1 class="text-3xl font-bold text-gray-800 mb-6">Edit User</h1>
     <EditUserForm client:load userId={id} />
   </div>
-</SimpleLayout>
+</SidebarLayout>
